test/libyul/yulSyntaxTests/number_literal_2.yul
{ let x:u256 := .1:u256 }
// ----
// ParserError 4828: (16-18='.1'): Invalid number literal.
